name:                GoForCover
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wenkokke/GoForCover#readme
license:             BSD3
license-file:        LICENSE
author:              Wen Kokke
maintainer:          wen.kokke@gmail.com
copyright:           (c) 2017 Wen Kokke
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable gf-coverage
  hs-source-dirs:      .
  main-is:             gf-coverage.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gf
                     , Glob
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wenkokke/GoForCover
